# QueryPARCEL

./: .gitignore  README.md  pyproject.toml
appendix/: A1_Motivation_Queries.md  A2_ModelArch_Training.md  A3_EngineConfiguration.md  A4_Datasets.md  A5_ClusterDetails.md  A6_ZeroShot.md  A7_EngineAdapter_Ext.md  README.md
appendix/spark_config/: spark-w1.json  spark-w4.json
config/: winning_run_500k_112_123_w8cjaq67.yaml
flexdata_metric_prediction/: __init__.py
flexdata_metric_prediction/dataset/: dataset.py  dataset_builder.py  gnn_dataloader.py  gnn_dataset.py  metric_normalizer.py  query_datapoint.py  query_dataset.py
flexdata_metric_prediction/encoder/: basic_encoder.py  encoder.py  hint_encoder.py  imdb_encoder.py  opMapping.json  opMappingNew.json  relMapping.json  semantic_encoder.py  typeMapping.json
flexdata_metric_prediction/input_data_warehouse/etl_pipeline/: etl_orchestrator.py  etl_presto.py  etl_spark.py  ingestion_config.yaml  spark_event_parser.py
flexdata_metric_prediction/model/: bottom_up_gnn.py  builders.py  checkpoint.py  eval.py  loss.py  metrics.py  multi_head_model.py  set_aggregation_model.py  train.py
flexdata_metric_prediction/routing_eval/: cost_model.py
flexdata_metric_prediction/tree/: node_name_mapping.py  prune_tree.py  tree.py  tree_nodes.py
flexdata_metric_prediction/utils/: logging_utils.py  model_summary.py  prettyPrint.py  printGraph.py  read_config.py  seed.py  timer.py  training_visualizer.py  wandb_utils.py
notebooks/: inference_demo.ipynb
scripts/: train_multi_metric.py
(+8371 files in other folders)
